--- a/my-react-flow-app/package.json
+++ b/my-react-flow-app/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@xyflow/react": "^12.4.2",
+    "axios": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scan": "^0.3.3",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.4",
+    "typescript": "^5.8.2",
     "web-vitals": "^4.2.4"
   },
   "browserslist": {
